[package]
name = "fastdivide"
version = "0.3.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "zlib-acknowledgement"
description = """Fastdivide is a partial port of libdivide. It makes it possible to reduce the cost of divisions."""
categories = ["database-implementations", "data-structures"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = []
std = []

[dependencies]

[[bench]]
name = "bench-divide"
path = "./src/bench.rs"
test = false
bench = true

[profile.bench]
lto = true
